# SmallScalePP_Project

./: Readme.md  performance.py
Old_Solution/cudasrc/: Makefile  cudatest.sub
Old_Solution/cudasrc/src/: CUDASol.cu
Old_Solution/openmpsrc/: Makefile  openmp.sub
Old_Solution/openmpsrc/matmul_perf/: matmul  openMPTest.o86932  openmp.sub
Old_Solution/openmpsrc/src/: OpenMPSol.h
cudasrc/: CMakeLists.txt  README.md  cudatest.sub
cudasrc/includes/: CUDASol.cuh  Transpose.cuh
cudasrc/src/: CUDASol.cu  CUDASol.cuh  CUDASolMain.cu  Transpose.cu
openmpsrc/: Makefile  README.md  openmp.sub  output_openmp.txt
openmpsrc/matmul_perf/: matmul
openmpsrc/src/: OpenMPSol.cc  OpenMPSol.h  OpenMPSolMain.cc  OpenMPSoll.cc  Transpose.cc  Transpose.h
